--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -40,7 +40,7 @@ $sidebar-width-breakpoint: 700px;
 
 $metadata-sidebar-width-open: 400px;
 $metadata-sidebar-width-closed: 0;
-$metadata-sidebar-width-breakpoint: 1200px;
 
 $metadata-sidebar-code-open: 480px;
 $metadata-sidebar-code-closed: 0;
+$metadata-sidebar-code-breakpoint: 1200px;
